2002-11-15  Ethan Merritt  <merritt@u.washington.edu>

        * src/term.h src/show.c: Accommodate minor inconsistencies in the
	PNG options in various Makefile.{OS} files.

2002-11-13  Ethan Merritt  <merritt@u.washington.edu>

        * configure.in: Tweak the logic to correctly handle a more complete
	set of combinations of old/new libgd old/new PNG driver and 
	--with/--without/--with=dir/ configuration options.

2002-11-12  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graph3d.c(xtick_callback): Remove extra } when #ifndef PM3D.

2002-11-05  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc, term/atariaes.trm, term/atarivdi.trm: Fix more
	misprints.

2002-11-04  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* fit.c (regress): Fix SF bug # 631323: spelling "occured" -->
 	"occurred".

2002-11-03  Harald Harders  <h.harders@tu-bs.de>

	* src/save.c: Fix crash from saving arrowstyle.

2002-11-01  Ethan Merritt  <merritt@u.washington.edu>

        * src/axis.c src/gadgets.c src/graph3d.c src/term.c term/pdf.trm:
 	Remove unused variables and add #include statements to pick up
 	missing function prototypes. This fixes current crop of warnings
 	from gcc -Wall.

2002-10-31  Ethan Merritt  <merritt@u.washington.edu>

        * prepare: Fix capitalization of 'Makefile.in' in prepare script.

2002-10-25  Ethan Merritt  <merritt@u.washington.edu>

        * term/pdf.trm: Bring pattern fill behavior into conformity with
 	other terminals (opaque background, continuous lines).

2002-10-28  Petr Mikulik  <mikulik@physics.muni.cz>

	* prepare: Added sed command to fix a bug in automake's output to
 	src/Makefile.in: missing $(EXEEXT).

2002-10-25  Ethan Merritt  <merritt@u.washington.edu>

        * src/graphics.c src/win/wgraph.c term/fig.trm term/pdf.trm:
 	Replace tests on fillstyle parameter to use enums FS_* instead of
 	pure constants.

2002-10-25  Petr Mikulik  <mikulik@physics.muni.cz>
