@@ -1,3 +1,9 @@
+2002-11-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
+
+	* src/win/winmain.c (WinMain) [MSC, WIN32]: Use predefined __argc
+ 	and __argv instead of old hack to generate them from scratch,
+ 	which couldn't cope with blanks in file names or quoted arguments.
+
 2002-11-15  Ethan Merritt  <merritt@u.washington.edu>
 
         * src/term.h src/show.c: Accommodate minor inconsistencies in the
@@ -1443,7 +1449,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/11/14 03:27:32 $).
+	last modification date (from the tag $Date: 2002/11/16 04:23:17 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
